force-app/main/default/objects/Floor__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Add notes about layout or usage (e.g., &quot;IT team floor&quot;)</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>