force-app/main/default/objects/Floor__c/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <label>Floors</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Floors</relationshipLabel>
    <relationshipName>Floors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>